add exceptions delete

--- a/Integrador3/src/main/resources/application.properties
+++ b/Integrador3/src/main/resources/application.properties
@@ -13,6 +13,6 @@ springdoc.swagger-ui.path=/swagger-ui.html
 springdoc.swagger-ui.tagsSorter=alpha
 springdoc.swagger-ui.operationsSorter=alpha
 
-springdoc.swagger-ui.title=Vehicle API Documentation
-springdoc.swagger-ui.description=API para gestion de vehiculos
+springdoc.swagger-ui.title=Universidad API Documentation
+springdoc.swagger-ui.description=API para gestion de Alumnos, Carreras e Inscripciones
 springdoc.swagger-ui.version=1.0.0
