--- a/tpEspecial/pom.xml
+++ b/tpEspecial/pom.xml
@@ -14,6 +14,7 @@
         <module>parada-service</module>
         <module>eureka-service</module>
         <module>mantenimiento-service</module>
+        <module>monopatin-service</module>
     </modules>
 
     <properties>
