--- a/tpEspecial/mantenimiento-service/src/main/resources/application.properties
+++ b/tpEspecial/mantenimiento-service/src/main/resources/application.properties
@@ -1,10 +1,37 @@
 spring.application.name=mantenimiento-service
 server.port=8084
 
-# Si todavía no configurás DB, evitá que JPA pida datasource:
 spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.jdbc.DataSourceAutoConfiguration,org.springframework.boot.autoconfigure.orm.jpa.HibernateJpaAutoConfiguration
+#spring.datasource.url=jdbc:mysql://localhost:3306/mantenimiento?createDatabaseIfNotExist=true&serverTimezone=UTC
+#spring.datasource.username=root
+#spring.datasource.password=
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+#spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.open-in-view=false
+#spring.jpa.show-sql=true
+
 
 # Eureka
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
-eureka.client.fetch-registry=true
-eureka.client.register-with-eureka=true
+
+#True para Eureka
+eureka.client.fetch-registry=false
+#True para Eureka
+eureka.client.register-with-eureka=false
+#Eliminar si se pasa a Eureka
+spring.cloud.discovery.enabled=false
+eureka.client.enabled=false
+
+#---------------------------------------------------------
+#**Microservicio Mantenimiento**
+# Entidad: Mantenimiento
+
+# id: Long
+# idMonopatin: Long
+# fechaHoraInicio: LocalDateTime
+# fechaHoraFin: LocalDateTime (nullable)
+# descripcion: String
+# kilometrosAlIniciar: Double
+# tiempoUsoAlIniciar: Long
+# idEncargado: String
