--- a/tpEspecial/monopatin-service/src/main/resources/application.properties
+++ b/tpEspecial/monopatin-service/src/main/resources/application.properties
@@ -3,8 +3,34 @@ server.port=8085
 
 # Si todavía no configurás DB, evitá que JPA pida datasource:
 spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.jdbc.DataSourceAutoConfiguration,org.springframework.boot.autoconfigure.orm.jpa.HibernateJpaAutoConfiguration
+#spring.datasource.url=jdbc:mysql://localhost:3306/monopatin?createDatabaseIfNotExist=true&serverTimezone=UTC
+#spring.datasource.username=root
+#spring.datasource.password=
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+#spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.open-in-view=false
+#spring.jpa.show-sql=true
+
 
 # Eureka
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
-eureka.client.fetch-registry=true
-eureka.client.register-with-eureka=true
+
+#True para Eureka
+eureka.client.fetch-registry=false
+#True para Eureka
+eureka.client.register-with-eureka=false
+#Eliminar si se pasa a Eureka
+spring.cloud.discovery.enabled=false
+eureka.client.enabled=false
+
+
+# 2. **Microservicio Monopatín**
+# Entidad: Monopatín
+
+# id: Long
+# estado: String (DISPONIBLE, EN_USO, EN_MANTENIMIENTO)
+# latitud: Double
+# longitud: Double
+# kilometrosTotales: Double
+# tiempoUsoTotal: Long (en minutos)
