--- a/tpEspecial/parada-service/src/main/resources/application.properties
+++ b/tpEspecial/parada-service/src/main/resources/application.properties
@@ -2,23 +2,33 @@ spring.application.name=parada-service
 
 server.port=8083
 
-#spring.datasource.url=jdbc:mysql://localhost:3306/paradas?createDatabaseIfNotExist=true&serverTimezone=UTC
+spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.jdbc.DataSourceAutoConfiguration,org.springframework.boot.autoconfigure.orm.jpa.HibernateJpaAutoConfiguration
+#spring.datasource.url=jdbc:mysql://localhost:3306/parada?createDatabaseIfNotExist=true&serverTimezone=UTC
 #spring.datasource.username=root
-#spring.datasource.password=root
+#spring.datasource.password=
 #spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 #spring.jpa.hibernate.ddl-auto=update
 #spring.jpa.open-in-view=false
 #spring.jpa.show-sql=true
 
+# Eureka
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
-eureka.client.fetch-registry=true
-eureka.client.register-with-eureka=true
 
-feign.client.config.default.connect-timeout=2000
-feign.client.config.default.read-timeout=3000
+#True para Eureka
+eureka.client.fetch-registry=false
+#True para Eureka
+eureka.client.register-with-eureka=false
+#Eliminar si se pasa a Eureka
+spring.cloud.discovery.enabled=false
+eureka.client.enabled=false
 
-logging.level.org.springframework.web=INFO
-logging.level.org.hibernate.SQL=DEBUG
+# 3. **Microservicio Parada**
+# Entidad: Parada
 
-spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.jdbc.DataSourceAutoConfiguration,org.springframework.boot.autoconfigure.orm.jpa.HibernateJpaAutoConfiguration
+# id: Long
+# latitud: Double
+# longitud: Double
+# capacidadMaxima: Integer
+# habilitada: Boolean
+
