--- a/tpEspecial/usuario-service/src/main/resources/application.properties
+++ b/tpEspecial/usuario-service/src/main/resources/application.properties
@@ -22,17 +22,7 @@ eureka.client.register-with-eureka=false
 spring.cloud.discovery.enabled=false
 eureka.client.enabled=false
 
-# Configuracion JWT
-jwt.secret=4cC4WZ9rQX0pS7mBv6yNf2aK8hT3wD1qL9uR5xE7jM2nG4pV6zB8yC0
-jwt.access-token-expiration=900
-jwt.refresh-token-expiration=604800
-
-
-#springdoc.api-docs.path=/api-docs
-#springdoc.swagger-ui.path=/swagger-ui.html
-#springdoc.swagger-ui.tagsSorter=alpha
-#springdoc.swagger-ui.operationsSorter=alpha
-
-#springdoc.swagger-ui.title=Usuario-Cuentas-Auth API Documentation
-#springdoc.swagger-ui.description=API para gestion de Usuarios, Cuentas y Autenticacion
-#springdoc.swagger-ui.version=1.0.0
+springdoc.api-docs.path=/api-docs
+springdoc.swagger-ui.path=/swagger-ui.html
+springdoc.swagger-ui.tagsSorter=alpha
+springdoc.swagger-ui.operationsSorter=alpha
