--- a/tpEspecial/pom.xml
+++ b/tpEspecial/pom.xml
@@ -58,7 +58,7 @@
                     <version>3.11.0</version>
                     <configuration>
                         <release>${java.version}</release>
-                        <parameters>true</parameters> <!-- ¡clave! -->
+                        <parameters>true</parameters>
                     </configuration>
                 </plugin>
             </plugins>
