--- a/tpEspecial/viaje-service/src/main/resources/application.properties
+++ b/tpEspecial/viaje-service/src/main/resources/application.properties
@@ -2,14 +2,17 @@ spring.application.name=viaje-service
 
 server.port=8087
 
-spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.jdbc.DataSourceAutoConfiguration,org.springframework.boot.autoconfigure.orm.jpa.HibernateJpaAutoConfiguration
-spring.datasource.url=jdbc:mysql://localhost:3306/viaje?createDatabaseIfNotExist=true&serverTimezone=UTC#spring.datasource.username=root
+# Datasource
+spring.datasource.url=jdbc:mysql://localhost:3306/viaje_db?createDatabaseIfNotExist=true&serverTimezone=UTC
+spring.datasource.username=root
 spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-spring.jpa.hibernate.ddl-auto=update
+# JPA/Hibernate
+spring.jpa.hibernate.ddl-auto=create
 spring.jpa.open-in-view=false
 spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
 
 # Eureka
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
@@ -21,5 +24,7 @@ eureka.client.register-with-eureka=false
 #Eliminar si se pasa a Eureka
 spring.cloud.discovery.enabled=false
 eureka.client.enabled=false
+
+
 
 
