--- a/tpEspecial/facturacion-service/src/main/resources/application.properties
+++ b/tpEspecial/facturacion-service/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.application.name=facturacion-service
 server.port=8088
 
 # Datasource
-spring.datasource.url=jdbc:mysql://localhost:3306/facturacion_db?createDatabaseIfNotExist=true&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://localhost:3306/facturacion?createDatabaseIfNotExist=true&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
