--- a/tpEspecial/parada-service/pom.xml
+++ b/tpEspecial/parada-service/pom.xml
@@ -38,7 +38,7 @@
             <scope>runtime</scope>
         </dependency>
 
-        <!-- Descubrimiento + Feign -->
+        <!-- Descubrimiento + (Feign solo si este servicio llama a otros) -->
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
@@ -67,6 +67,13 @@
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
+
+        <dependency>
+            <groupId>org.springdoc</groupId>
+            <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+            <version>2.8.11</version>
+        </dependency>
+
     </dependencies>
 
     <build>
