--- a/tpEspecial/parada-service/src/main/resources/application.properties
+++ b/tpEspecial/parada-service/src/main/resources/application.properties
@@ -1,34 +1,25 @@
 spring.application.name=parada-service
-
 server.port=8083
 
-spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.jdbc.DataSourceAutoConfiguration,org.springframework.boot.autoconfigure.orm.jpa.HibernateJpaAutoConfiguration
-#spring.datasource.url=jdbc:mysql://localhost:3306/parada?createDatabaseIfNotExist=true&serverTimezone=UTC
-#spring.datasource.username=root
-#spring.datasource.password=
-#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+# Configuración de base de datos MySQL
+spring.datasource.url=jdbc:mysql://localhost:3306/parada?createDatabaseIfNotExist=true&serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-#spring.jpa.hibernate.ddl-auto=update
-#spring.jpa.open-in-view=false
-#spring.jpa.show-sql=true
+# Configuración de JPA/Hibernate
+spring.jpa.hibernate.ddl-auto=create
+spring.jpa.open-in-view=false
+spring.jpa.show-sql=true
 
-# Eureka
+# Eureka Client Configuration
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
-
-#True para Eureka
 eureka.client.fetch-registry=false
-#True para Eureka
 eureka.client.register-with-eureka=false
-#Eliminar si se pasa a Eureka
 spring.cloud.discovery.enabled=false
 eureka.client.enabled=false
 
-# 3. **Microservicio Parada**
-# Entidad: Parada
-
-# id: Long
-# latitud: Double
-# longitud: Double
-# capacidadMaxima: Integer
-# habilitada: Boolean
-
+# Swagger/OpenAPI Configuration
+springdoc.api-docs.path=/api-docs
+springdoc.swagger-ui.path=/swagger-ui.html
+springdoc.swagger-ui.tagsSorter=alpha
