--- a/tpEspecial/viaje-service/src/main/resources/application.properties
+++ b/tpEspecial/viaje-service/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.application.name=viaje-service
 server.port=8087
 
 # Datasource
-spring.datasource.url=jdbc:mysql://localhost:3306/viaje_db?createDatabaseIfNotExist=true&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://localhost:3306/viaje?createDatabaseIfNotExist=true&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
