--- a/tpEspecial/mantenimiento-service/pom.xml
+++ b/tpEspecial/mantenimiento-service/pom.xml
@@ -76,7 +76,27 @@
             <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
             <version>2.3.0</version>
         </dependency>
+        <dependency>
+            <groupId>edu.tudai.arq</groupId>
+            <artifactId>monopatin-service</artifactId>
+            <version>1.0.0</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>edu.tudai.arq</groupId>
+            <artifactId>usuario-service</artifactId>
+            <version>1.0.0</version>
+            <scope>compile</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-security</artifactId>
+            <version>3.5.5</version>
+        </dependency>
     </dependencies>
+
+
 
     <build>
         <plugins>
