--- a/tpEspecial/mantenimiento-service/src/main/resources/application.properties
+++ b/tpEspecial/mantenimiento-service/src/main/resources/application.properties
@@ -11,21 +11,15 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=create
 spring.jpa.open-in-view=false
 spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+
 
 # Eureka Client Configuration
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
+#True para Eureka
 eureka.client.fetch-registry=false
+#True para Eureka
 eureka.client.register-with-eureka=false
+#Eliminar si se pasa a Eureka
 spring.cloud.discovery.enabled=false
 eureka.client.enabled=false
-
-# Swagger/OpenAPI Configuration
-springdoc.api-docs.path=/api-docs
-springdoc.swagger-ui.path=/swagger-ui.html
-springdoc.swagger-ui.tagsSorter=alpha
-# fechaHoraInicio: LocalDateTime
-# fechaHoraFin: LocalDateTime (nullable)
-# descripcion: String
-# kilometrosAlIniciar: Double
-# tiempoUsoAlIniciar: Long
-# idEncargado: String
