--- a/tpEspecial/mantenimiento-service/src/main/resources/application.properties
+++ b/tpEspecial/mantenimiento-service/src/main/resources/application.properties
@@ -13,13 +13,19 @@ spring.jpa.open-in-view=false
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
-
-# Eureka Client Configuration
+# Eureka
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
+
 #True para Eureka
 eureka.client.fetch-registry=false
 #True para Eureka
 eureka.client.register-with-eureka=false
+
 #Eliminar si se pasa a Eureka
 spring.cloud.discovery.enabled=false
 eureka.client.enabled=false
+
+springdoc.api-docs.path=/api-docs
+springdoc.swagger-ui.path=/swagger-ui.html
+springdoc.swagger-ui.tagsSorter=alpha
+springdoc.swagger-ui.operationsSorter=alpha
