--- a/tpEspecial/parada-service/src/main/resources/application.properties
+++ b/tpEspecial/parada-service/src/main/resources/application.properties
@@ -1,16 +1,30 @@
 spring.application.name=parada-service
 server.port=8083
 
-# Configuraci?n de base de datos MySQL
 spring.datasource.url=jdbc:mysql://localhost:3306/parada?createDatabaseIfNotExist=true&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-# Configuraci?n de JPA/Hibernate
+# Configuracion de JPA/Hibernate
 spring.jpa.hibernate.ddl-auto=create
 spring.jpa.open-in-view=false
 spring.jpa.show-sql=true
+
+# ============================================================================
+# CONFIGURACIÓN MONGODB
+# ============================================================================
+# ============================================================================
+# Flapdoodle
+# ============================================================================
+#spring.data.mongodb.database=parada_db
+# ============================================================================
+# MongoDB
+# ============================================================================
+#spring.data.mongodb.uri=mongodb://localhost:27017/parada
+#spring.data.mongodb.database=parada_db
+#spring.data.mongodb.username=admin
+#spring.data.mongodb.password=password
 
 # Swagger/OpenAPI Configuration
 springdoc.api-docs.path=/api-docs
