add chat to viaje-service

--- a/tpEspecial/viaje-service/src/main/resources/application.properties
+++ b/tpEspecial/viaje-service/src/main/resources/application.properties
@@ -9,10 +9,15 @@ spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # JPA/Hibernate
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.open-in-view=false
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+
+# Groq IA Configuration
+
+groq.base-url=https://api.groq.com/openai
+groq.model=llama-3.3-70b-versatile
 
 
 
