--- a/tpEspecial/parada-service/src/main/resources/application.properties
+++ b/tpEspecial/parada-service/src/main/resources/application.properties
@@ -1,32 +1,28 @@
 spring.application.name=parada-service
 server.port=8083
 
-spring.datasource.url=jdbc:mysql://localhost:3306/parada?createDatabaseIfNotExist=true&serverTimezone=UTC
-spring.datasource.username=root
-spring.datasource.password=
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+# ============================================================================
+# MySQL CONFIGURATION
+# ============================================================================
+#spring.datasource.url=jdbc:mysql://localhost:3306/parada?createDatabaseIfNotExist=true&serverTimezone=UTC
+#spring.datasource.username=root
+#spring.datasource.password=
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#spring.jpa.hibernate.ddl-auto=create
+#spring.jpa.open-in-view=false
+#spring.jpa.show-sql=true
 
-# Configuracion de JPA/Hibernate
-spring.jpa.hibernate.ddl-auto=create
-spring.jpa.open-in-view=false
-spring.jpa.show-sql=true
-
 # ============================================================================
-# CONFIGURACIÓN MONGODB
+# NoSQL EMBEBIDO (Flapdoodle)
 # ============================================================================
-# ============================================================================
-# Flapdoodle
-# ============================================================================
-#spring.data.mongodb.database=parada_db
-# ============================================================================
-# MongoDB
-# ============================================================================
+spring.data.mongodb.database=parada_db
+de.flapdoodle.mongodb.embedded.version=7.0.0
 #spring.data.mongodb.uri=mongodb://localhost:27017/parada
-#spring.data.mongodb.database=parada_db
 #spring.data.mongodb.username=admin
-#spring.data.mongodb.password=password
+#spring.data.mongodb.password=
 
 # Swagger/OpenAPI Configuration
 springdoc.api-docs.path=/api-docs
 springdoc.swagger-ui.path=/swagger-ui.html
 springdoc.swagger-ui.tagsSorter=alpha
+
