--- a/tpEspecial/viaje-service/src/main/resources/application.properties
+++ b/tpEspecial/viaje-service/src/main/resources/application.properties
@@ -2,19 +2,17 @@ spring.application.name=viaje-service
 
 server.port=8087
 
-# Datasource
 spring.datasource.url=jdbc:mysql://localhost:3306/viaje?createDatabaseIfNotExist=true&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-# JPA/Hibernate
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.open-in-view=false
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
-# Groq IA Configuration
+# Groq IA
 
 groq.base-url=https://api.groq.com/openai
 groq.model=llama-3.3-70b-versatile
