--- a/tpEspecial/gateway-service/src/main/resources/application.properties
+++ b/tpEspecial/gateway-service/src/main/resources/application.properties
@@ -28,7 +28,7 @@ spring.cloud.gateway.server.webflux.routes[4].predicates[0]=Path=/api/v1/manteni
 
 spring.cloud.gateway.server.webflux.routes[5].id=viaje-service
 spring.cloud.gateway.server.webflux.routes[5].uri=http://localhost:8087
-spring.cloud.gateway.server.webflux.routes[5].predicates[0]=Path=/api/v1/viajes/**,/api/v1/pausas/**
+spring.cloud.gateway.server.webflux.routes[5].predicates[0]=Path=/api/v1/viajes/**,/api/v1/pausas/**,/api/v1/chat/**
 
 spring.cloud.gateway.server.webflux.routes[6].id=facturacion-service
 spring.cloud.gateway.server.webflux.routes[6].uri=http://localhost:8088
