--- a/tpEspecial/gateway-service/src/main/resources/application.properties
+++ b/tpEspecial/gateway-service/src/main/resources/application.properties
@@ -1,11 +1,11 @@
 spring.application.name=gateway-service
 server.port=8080
 
-# JWT Configuration (debe ser la misma que en usuario-service)
+# JWT Configuration
 jwt.secret=AdrianWilgenhoff_TP_Especial_Grupo_25_Arquitecturas_Web
 jwt.expiration=3600000
 
-# Gateway Routes Configuration (usando la clave correcta)
+# Gateway Routes Configuration
 spring.cloud.gateway.server.webflux.routes[0].id=auth-service
 spring.cloud.gateway.server.webflux.routes[0].uri=http://localhost:8086
 spring.cloud.gateway.server.webflux.routes[0].predicates[0]=Path=/api/v1/auth/**
